# firefly_reports

./: .pre-commit-config.yaml  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  publish.yml  test.yml
firefly_reports/: __init__.py  __main__.py  email.py  firefly.py
firefly_reports.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config.py
