[project]
name = "firefly_reports"
authors = [{name = "Christopher Tyler", email = "ChristopherTyler@engineer.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"] #, "description"]
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]
